[package]
name = "laska"
version = "0.1.0"
edition = "2021"
description = "ICMP sockets for both IPv4 and IPv6"
repository = "https://github.com/solomatovs/laska"
authors = ["Sergei Solomatov <solomatovs@gmail.com>"]
license = "Mit"

[dependencies]
anyhow = "1.0"
byteorder = "1.4.2"
libc = "0.2.151"
ctrlc = "3.4.2"
log = "0.4"
nix = "0.27.1"
socket2 = {version = "0.5.5", features = ["all"]}

[dev-dependencies]
env_logger = "0.10.0"